--- a/MerlionPortal/MerlionPortal-war/web/templates/snippets/admin/navigation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/snippets/admin/navigation.xhtml
@@ -11,7 +11,12 @@
             <c:set var="root" value="${request.contextPath}" />
             <nav>
                 <div class="navbar navbar-default navbar-static-top" role="navigation">
-                    <div class="top-nav"></div>
+                    <div class="top-nav">
+                        <div class="top-nav-content pull-right">
+                        <span><i>Tel: +65-1800-mer-lion</i></span>
+                        <span><i>Email: contact@merlion.com</i></span>
+                        </div>
+                    </div>
                     <div class="container">
                         <div class="navbar-header">
                             <img src="${root}/img/header-logo.png" style="height: 60px " />
