--- a/MerlionPortal/MerlionPortal-war/web/templates/templateadmin.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/templateadmin.xhtml
@@ -26,8 +26,8 @@
             <!-- Content -->
             <div class="container content-area">
                 <p:breadCrumb>
-                    <p:menuitem value="Categories" url="#" />
-                    <p:menuitem value="Dashboard" url="#" />
+                    <p:menuitem value="Categories" url="${root}/index.xhtml" />
+                    <p:menuitem value="Dashboard" url="${root}/admin/dashboard.xhtml" />
                 </p:breadCrumb>
                 <ui:insert name="content" >
                     <div class="container right-container">
