trying to edit breadcrumb style

--- a/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
@@ -265,6 +265,10 @@ body{
 .no-border{
     border:none;
 }
+.ui-breadcrumb{
+    background: transparent;
+    border:0px;
+}
 
 h2.system-welcome{  
 }
