--- a/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
@@ -268,6 +268,9 @@ body{
 .ui-breadcrumb{
     background: transparent;
     border:0px;
+    -webkit-box-shadow: inset 0 0px 0 #ffffff;
+    -moz-box-shadow: inset 0 0px 0 #ffffff;
+    box-shadow: inset 0 0px 0 #ffffff;  
 }
 
 h2.system-welcome{  
