--- a/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
@@ -347,3 +347,39 @@ ol.d {
     margin-right: auto;
     width: 70%;
 }
+
+//user box
+.user-info>.row{
+    margin-right:0;
+    margin-left:0;
+}
+.user-info{
+    background-color: #ddd;
+    border-radius: 8px;
+    width:200px;
+    height:auto;
+    padding:10px;
+}
+.avatar{
+    background: url('../img/avatar.png') no-repeat;
+    display:inline-block;
+    height:75px;
+    width:63px;
+}
+.user-info-right{
+    display:inline-block;
+}
+.user-name{
+    text-align: left;
+    font-size:19px;
+    color: #732829;
+}
+.user-company{
+    font-size:13px;
+    margin-top:-4px;
+}
+.inbox, .viewlog{
+    font-size:14px;
+    margin-right: 8px;
+    text-decoration: underline;
+}
