--- a/MerlionPortal/MerlionPortal-war/web/templates/templateadmin.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/templateadmin.xhtml
@@ -30,6 +30,7 @@
                         <ui:insert name="right"></ui:insert>
                     </div>
                     <div class="container left-container">
+                        <ui:include src="/templates/snippets/userbox.xhtml"/> <!-- new -->
                         <ui:insert name="left"></ui:insert>
                     </div> 
                 </ui:insert>
