--- a/MerlionPortal/MerlionPortal-war/web/templates/templateuser.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/templateuser.xhtml
@@ -29,6 +29,7 @@
                     <ui:insert name="right"></ui:insert>
                 </div>
                 <div class="container left-container">
+                    <ui:include src="/templates/snippets/userbox.xhtml"/>
                     <ui:insert name="left"></ui:insert>
                 </div>            
             </ui:insert>
