--- a/MerlionPortal/MerlionPortal-war/web/templates/snippets/imports.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/snippets/imports.xhtml
@@ -19,7 +19,7 @@
             <script src="${root}/js/merlionportal.js" type="text/javascript"></script>
                     
             <!--Import fonts-->
-            <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway" type="text/css" />
+            <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway" type="text/css" />
         </ui:composition>
     </head>
 </html>
