--- a/MerlionPortal/MerlionPortal-war/web/css/dashboard.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/dashboard.css
@@ -13,13 +13,14 @@
     margin-left:auto;
     margin-right:auto;
     position:relative;
+    margin-top:25px;
 }
 .tile-overlay{
     position:absolute;
     color:white;
     background-color:rgba(60,60,60,0.7);
     font-size:45px;
-    width:260px;
+    width:261px;
     top:135px;
     border-radius: 0px 0px 6px 6px;
     text-align:right;
