--- a/MerlionPortal/MerlionPortal-war/web/css/viewusers.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/viewusers.css
@@ -1,9 +1,9 @@
-.ui-widget-header:nth-child(1){
+/*.ui-widget-header:nth-child(1){
     background:white;
     border:none;
     text-align: right;
     margin-bottom:10px;
-}
+}*/
 
 .ui-datatable{
     margin-top:10px;
