--- a/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
@@ -70,6 +70,10 @@ body{
     margin-top:15px;
 }
 
+.ui-menu.ui-widget li > .ui-menuitem-link.ui-state-hover{
+    background:gray;
+}
+
 .input-addon-fixedwidth{
     width:150px;
 }
