--- a/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
@@ -258,11 +258,11 @@ html {
     height: 100%;
 }
 body{
-    min-height: 100%;
+    height: 100%;
     font-family: 'Raleway', Arial, sans-serif;
 }
 .wrapper {
-    min-height: 652px;
+    min-height: 100%;
 /*    height: auto !important;  IE6 support 
     height: 100%;*/
     margin: 0 auto -80px; /* the bottom margin is the negative value of the footer's height */
