dashboard overlay responsive width

--- a/MerlionPortal/MerlionPortal-war/web/css/dashboard.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/dashboard.css
@@ -20,7 +20,7 @@
     color:white;
     background-color:rgba(60,60,60,0.7);
     font-size:45px;
-    width:261px;
+    width:96.3%;
     top:135px;
     border-radius: 0px 0px 6px 6px;
     text-align:right;
