--- a/MerlionPortal/MerlionPortal-war/web/css/dashboard.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/dashboard.css
@@ -25,7 +25,7 @@
     border-radius: 0px 0px 6px 6px;
     text-align:right;
     padding-right:10px;
-    border-top: 6px solid rgba(190, 20, 20, 0.6);
+    border-bottom: 6px solid rgba(190, 20, 20, 0.6);
 }
 
 .crmstile{
