menu hover color

--- a/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
@@ -71,7 +71,7 @@ body{
 }
 
 .ui-menu.ui-widget li > .ui-menuitem-link.ui-state-hover{
-    background:gray;
+    background:#aaa;
 }
 
 .input-addon-fixedwidth{
